k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: practice
  labels:
    app: backend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        practice.io/role: backend

      containers:
        - name: backend
          image: practice-backend:0.1.0
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 3000

          startupProbe:
            httpGet:
              path: /api/ready
              port: http
            periodSeconds: 5
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /api/ready
              port: http
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 15
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi


      terminationGracePeriodSeconds: 30
